src/test/deca/context/valid/created/sans_objet/else_if_rule.deca
// Auteur: Aymeric
//
// Historique:
//    cree le 10/01/2024
//
// Description:
//    test de programme syntaxiquement correct.

{
    if(false) {
        println("si tu vois cette phrase, quelque chose ne va pas !");
    } else if (true) {
        println("Hello world !");
    }
}